--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -45,8 +45,8 @@
 
                     <picture>
                         <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.webp" type="image/webp" class="subhero__image-zero-fee img-fluid lazyload">
-                        <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.png" type="image/png" class="subhero__image-zero-fee img-fluid lazyload">
-                        <img data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.png" data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.png" class="subhero__image-zero-fee img-fluid lazyload">
+                        <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" type="image/jpg" class="subhero__image-zero-fee img-fluid lazyload">
+                        <img data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" class="subhero__image-zero-fee img-fluid lazyload">
                     </picture>
 
                 </div>
