--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -69,8 +69,16 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Personal Injury Lawyers</h2>
-                        <picture class="d-md-inline-block d-lg-none">
+                        <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                        <div style="width: 36%;
+    background: url(/img/CATLA-brass.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right;
+}">
+
+                        </div>
+<!--                        <picture class="d-md-inline-block d-lg-none">
                             <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.webp" type="image/webp"
                                     class="img-fluid">
                             <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.png" type="image/png"
@@ -78,7 +86,7 @@
                             <img data-src="{{ .Site.BaseURL }}img/CATLA-brass.png"
                                  src="" class="img-fluid lazyload"
                                  alt="">
-                        </picture>
+                        </picture>-->
                     </div>
 
                     <p>
