1) hero adjustments 2) new employment badge

--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -48,8 +48,9 @@
                 </div>
 
             </div>
+<!--            <img data-src="{{ .Site.BaseURL }}img/attorneys-desktop.png" src="" class="img-fluid lazyload attorneys" alt="Group of Attorneys">-->
 
-            <picture class="attorneys">
+            <picture class="attorneys d-flex justify-content-end">
                 <source data-srcset="{{ .Site.BaseURL }}img/attorneys-desktop.webp" type="image/webp" class="img-fluid">
                 <source data-srcset="{{ .Site.BaseURL }}img/attorneys-desktop.png" type="image/png" class="img-fluid">
                 <img data-src="{{ .Site.BaseURL }}img/attorneys-desktop.png" src="" class="img-fluid lazyload" alt="Group of Attorneys">
