--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -58,24 +58,15 @@
             </div>
             <div class="whywlf__paragraph_container offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-7">
                 <picture class="d-none d-lg-block">
-                    <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.webp" type="image/webp"
-                            class="img-fluid">
-                    <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.png" type="image/png"
-                            class="img-fluid">
-                    <img data-src="{{ .Site.BaseURL }}img/CATLA-brass.png"
-                         src="" class="img-fluid lazyload float-right"
-                         alt="">
+                    <source data-srcset="{{ .Site.BaseURL }}img/CELA.webp" type="image/webp" class="img-fluid">
+                    <source data-srcset="{{ .Site.BaseURL }}img/CELA.png" type="image/png" class="img-fluid">
+                    <img data-src="{{ .Site.BaseURL }}img/CELA.png" src="" class="img-fluid lazyload float-right" alt="">
                 </picture>
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
                         <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
-                        <div style="width: 36%;
-    background: url(/img/CATLA-brass.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: right;
-}">
+                        <div class="supporttext__badge_mobile">
 
                         </div>
 <!--                        <picture class="d-md-inline-block d-lg-none">
