--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -300,7 +300,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
 
 
     .desktop .hero {
-        height: 25vw;
+        height: 23vw;
     }
 
     @media only screen and (min-width:1440px) {
@@ -370,7 +370,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     }
 
     .desktop .hero__headline h2{
-        font-size: 1.5vw;
+        font-size: 1.6vw;
     }
 
     @media only screen and (min-width:1440px) {
@@ -378,7 +378,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
             width: 403.188px;
         }
         .desktop .hero__headline h2{
-            font-size: 21.6px;
+            font-size: 23.024px;
         }
 
     }
@@ -409,7 +409,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
             padding: 0;
             position: absolute;
             top: 0;
-            width: 22vw;
+            width: 28vw;
         }
         .hero__attorneys {
             display: block;
@@ -427,8 +427,11 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
             padding: 0
         }
         .desktop picture.attorneys{
-            margin-left: 18vw;
+            margin-left: 24vw;
             margin-right: 1vw;
+        }
+        .desktop picture.attorneys{
+
         }
         .hero__form-title {
             color: #3d4e68;
