set lower form max height

--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -836,6 +836,7 @@ a.nav-link {
 }
 @media only screen and (min-width:992px) {
     .whywlf__form__container__before{
+        max-height: 494px;
         padding:25px;
     }
 }
