add onclick to chat widget

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -36,7 +36,7 @@
         <a class="header__phonenum capPhone font-weight-semi" href="tel:18005227274" onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Header Mobile Call- 1.800.522.7274'});">
           1.800.522.7274
         </a>
-        <div class="header__chatwidget header__text1">
+        <div class="header__chatwidget header__text1" onclick="window.open('https://platform.clientchatlive.com/w/chat/#/chat/wChz3T/register', '', 'width=800,height=500,toolbar=0,menubar=0,location=0,status=0,scrollbars=1,menubar=0,toolbar=0,resizable=1,left=50,top=50');">
           <img src="" data-src="{{ .Site.BaseURL }}img/Chat_Widget.svg" class="img-fluid lazyload" alt="">
         </div>
       </div>
