fix webp modernizer support

--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -1671,8 +1671,8 @@ img {
 .webp .supporttext__badge_mobile{
     background-image: url('/img/CELA.webp');
 }
-.nowebp .supporttext__badge_mobile{
-    background-image: url('/img/CELA.png');
+.no-webp .supporttext__badge_mobile{
+    background-image: url('/img/CELA.jpg');
 }
 .supporttext__badge_mobile{
     width: 36%;
