--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -59,8 +59,8 @@
             <div class="whywlf__paragraph_container offset-sm-1 col-sm-10 offset-md-2 col-md-8 offset-lg-0 col-lg-7">
                 <picture class="d-none d-lg-block">
                     <source data-srcset="{{ .Site.BaseURL }}img/CELA.webp" type="image/webp" class="img-fluid">
-                    <source data-srcset="{{ .Site.BaseURL }}img/CELA.png" type="image/png" class="img-fluid">
-                    <img data-src="{{ .Site.BaseURL }}img/CELA.png" src="" class="img-fluid lazyload float-right" alt="">
+                    <source data-srcset="{{ .Site.BaseURL }}img/CELA.jpg" type="image/jpg" class="img-fluid">
+                    <img data-src="{{ .Site.BaseURL }}img/CELA.jpg" src="" class="img-fluid lazyload float-right" alt="">
                 </picture>
 
                 <div class="text-left supporttext__paragraph_container">
@@ -69,15 +69,6 @@
                         <div class="supporttext__badge_mobile">
 
                         </div>
-<!--                        <picture class="d-md-inline-block d-lg-none">
-                            <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.webp" type="image/webp"
-                                    class="img-fluid">
-                            <source data-srcset="{{ .Site.BaseURL }}img/CATLA-brass.png" type="image/png"
-                                    class="img-fluid">
-                            <img data-src="{{ .Site.BaseURL }}img/CATLA-brass.png"
-                                 src="" class="img-fluid lazyload"
-                                 alt="">
-                        </picture>-->
                     </div>
 
                     <p>
@@ -95,27 +86,5 @@
 
             </div>
         </div>
-    </div>
-</div>
-
-
-    <div class="mobile-column-wrap">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-8">
-
-                </div>
-                <div class="col">
-
-                </div>
-            </div>
-          <div class="row">
-            <div class="col-lg-7">
-
-
-            </div>
-          </div>
-        </div>
-
     </div>
 </div>
