--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -1,7 +1,7 @@
 <section class="capabilities">
     <div class="container practice-areas">
         <h2 class="text-center font-weight-bold">WHAT WE CAN DO FOR YOU</h2>
-        <div class="what-we-can-do-container mobile-desktop">
+        <div class="what-we-can-do-container">
             <div class="specialty">
                 <div class="capability capability__max-compensation icon-max-compensation">
                 </div>
@@ -12,21 +12,25 @@
                 </div>
                 <span class="capability__message">Discrete And<br />Professional</span>
             </div>
-            <div class="specialty">
-                <div class="capability capability__cash-advance icon-come2you">
-                </div>
-                <span class="capability__message">We'll Come<br />To You</span>
-            </div>
 
             <div class="specialty">
-                <div class="capability capability__income-recovery icon-lost-wages">
+                <div class="capability icon-lost-wages">
                 </div>
                 <span class="capability__message">Recovery Of<br />Lost Wages</span>
             </div>
             <div class="specialty">
-                <div class="capability capability__fix-car icon-justice">
+                <div class="capability icon-come2you">
                 </div>
-                <span class="capability__message">Justice<br />For You</span>
+                <span class="capability__message">We'll Come<br />To You</span>
+            </div>
+            <div class="specialty">
+                <div class="capability icon-psych">
+                </div>
+                <span class="capability__message">Get Counseling<br />You Need</span>
+            </div>
+            <div class="specialty">
+                <div class="capability icon-cash-advance"></div>
+                <span class="capability__message">Cash Advance<br />On Your Case</span>
             </div>
         </div>
     </div>
