--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -149,7 +149,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     @media only screen and (min-width:992px) {
         .subhero {
             flex-direction: row;
-            justify-content: space-evenly
+            justify-content: space-between;
         }
     }
 
