--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -37,11 +37,8 @@
             <div class="subhero__border"></div>
 
             <div class="subhero__no-win-desktop d-none d-md-flex">
-                <div class="subhero__no-win-desktop_block1">
-                    <div class="subhero__no-win-desktop-no-win-text"><span>NO LEGAL FEES</span><span>UNLESS YOU WIN</span>
-                    </div>
+                <div class="subhero__no-win-desktop-no-win-text"><span>NO LEGAL FEES</span><span>UNLESS YOU WIN</span>
                 </div>
-                <div class="subhero__no-win-desktop_block2">
 
                     <picture>
                         <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.webp" type="image/webp" class="subhero__image-zero-fee img-fluid lazyload">
@@ -49,7 +46,6 @@
                         <img data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" class="subhero__image-zero-fee img-fluid lazyload">
                     </picture>
 
-                </div>
             </div>
             <div class="subhero__border"></div>
             <div class="subhero__recovered-desktop d-none d-md-block d-lg-none">
@@ -58,7 +54,7 @@
                     <span>RECOVERED</span> <span class="subhero__recovered--break">FOR OUR CLIENTS</span>
                 </span>
             </div>
-            <div class="subhero__recovered-desktop d-none d-md-none d-lg-block" style="width: 33%;">
+            <div class="subhero__recovered-desktop d-none d-md-none d-lg-block">
                 <span class="subhero__recovered-text1" style="display: block">
                     <span>MORE THAN $400M</span>
                     <span>RECOVERED FOR OUR CLIENTS</span>
