--- a/site/layouts/partials/recovered-mobile.html
+++ b/site/layouts/partials/recovered-mobile.html
@@ -1,4 +1,4 @@
-<section class="recovered d-sm-block d-md-none">
+<section class="recovered d-md-block d-lg-none">
   <div class="container u-remove-all-padding">
     <div class="mobile-column-wrap recovered__container subhero__recovered-text1">
       <span>MORE THAN $400M</span>
