--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -66,7 +66,7 @@
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
                         <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
-                        <div class="supporttext__badge_mobile">
+                        <div class="supporttext__badge_mobile lazyload">
 
                         </div>
                     </div>
