--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -7,7 +7,7 @@
                 <img data-src="{{ .Site.BaseURL }}img/super-lawyers.jpg" src="" class="img-fluid lazyload" alt="Super Lawyers">
             </picture>
             <div class="herolower__text font-weight-bold">
-                <span>NO LEGAL FEES</span><span>UNLESS YOU WIN</span>
+                <span>GET THE JUSTICE</span><span>YOU DESERVE</span>
             </div>
         </div>
         <div class="herolower__rightblock">
@@ -37,7 +37,7 @@
             <div class="subhero__border"></div>
 
             <div class="subhero__no-win-desktop d-none d-md-flex">
-                <div class="subhero__no-win-desktop-no-win-text"><span>NO LEGAL FEES</span><span>UNLESS YOU WIN</span>
+                <div class="subhero__no-win-desktop-no-win-text"><span>GET THE JUSTICE</span><span>YOU DESERVE</span>
                 </div>
 
                     <picture>
