updated pregnancy messaging

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Pregnancy Discrimination Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -65,22 +65,19 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                        <h2 class="text-uppercase">Speak To The Best Pregnancy Discrimination Lawyers</h2>
                         <div class="supporttext__badge_mobile lazyload">
 
                         </div>
                     </div>
 
                     <p>
-                        In order to get the compensation that you deserve, you must work with the best car accident law
-                        firm in your area. Our dedicated team of car accident lawyers will fight for you against the
-                        insurance company’s attempts to weaken your claim. Because of this, Wilshire Law Firm has
-                        familiarized itself with how insurance companies work and we know how to counteract their
-                        delay-and-deny tactics. It is common for us to double, triple, or even quadruple an insurance
-                        company’s initial settlement offer. We have won more than <strong>$400 million</strong> for our
-                        clients. If you want to get maximum compensation for your damages, injuries and losses, call
-                        Wilshire Law Firm today. With our team of expert car accident attorneys, you will never have to
-                        settle for less than you deserve. Call now or tap the button below for a free consultation!
+                        Title VII of the Pregnancy Discrimination Act states that you cannot be denied a job, promotion, or be terminated because you are pregnant and that you have the “same rights, leave privileges and other benefits, as other workers who are disabled from working.”
+                        On a state level, the California Fair Employment and Housing Act (FEHA) reinforces this act by stating that “it is an unlawful employment practice for any employer with one or more employees or other covered entities to harass an employee or applicant because
+                        of pregnancy or perceived pregnancy, childbirth, breastfeeding, or any related medical conditions.” The law is clear and Wilshire Law Firm intends to uphold this law. When supervisors and human resources fail you, you need a law firm you can count on like Wilshire Law Firm. Our top
+                        pregnancy discrimination lawyers are on your side and ready to protect your rights to work without facing pregnancy discrimination. By using our employment law legal expertise, our lawyers will aggressively fight to win your case. Our pregnancy discrimination lawyers' aim to provide
+                        you with maximum compensation for the damages and losses you may have suffered in the workplace. Trust us with your case like so many others before you who have seen their compensation double and even quadruple through our services, resulting in more than 400 million dollars being
+                        put into the hands of our client. Take action by calling Wilshire Law Firm today for your free case consultation.
                     </p>
                 </div>
 
