Disability Discrimination verbiage update

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Disability Discrimination Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -65,22 +65,19 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                        <h2 class="text-uppercase">Speak To The Best Disability Discrimination Lawyers</h2>
                         <div class="supporttext__badge_mobile lazyload">
 
                         </div>
                     </div>
 
                     <p>
-                        In order to get the compensation that you deserve, you must work with the best car accident law
-                        firm in your area. Our dedicated team of car accident lawyers will fight for you against the
-                        insurance company’s attempts to weaken your claim. Because of this, Wilshire Law Firm has
-                        familiarized itself with how insurance companies work and we know how to counteract their
-                        delay-and-deny tactics. It is common for us to double, triple, or even quadruple an insurance
-                        company’s initial settlement offer. We have won more than <strong>$400 million</strong> for our
-                        clients. If you want to get maximum compensation for your damages, injuries and losses, call
-                        Wilshire Law Firm today. With our team of expert car accident attorneys, you will never have to
-                        settle for less than you deserve. Call now or tap the button below for a free consultation!
+                        According to the California Fair Employment and Housing Act (FEHA), employers must make reasonable accommodations and may not deny employment on the basis of having to make those reasonable accommodations. Furthermore, under The Americans with
+                        Disabilities Act of 1991, employers and fellow employees cannot discriminate or harass those with disabilities. And, yet, 1 in 4 people with a disability suffer from some form of discrimination. If you feel like you've been discriminated against,
+                        then it's time to hire a Wilshire Law Firm disability discrimination lawyer. With over 140 professionals working for Wilshire Law Firm, our team of lawyers will aggressively fight for you to be compensated a generous amount for the loss and damages
+                        you have sustained because of disability discrimination practices. Our firm has a proven record of not only fighting, but winning as well. So far, we have put more than 400 million dollars into the hands of our clients. Seek justice against companies
+                        that have used discriminatory practices against you by bringing your case to one of our disability discrimination lawyers. Wilshire Law Firm offers a free case consultation, so you have nothing to lose by calling us today.
+
                     </p>
                 </div>
 
