Whistleblower campaign verbiage update

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Whistleblower Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -65,22 +65,19 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                        <h2 class="text-uppercase">Speak To The Best Whistleblower Lawyers</h2>
                         <div class="supporttext__badge_mobile lazyload">
 
                         </div>
                     </div>
 
                     <p>
-                        In order to get the compensation that you deserve, you must work with the best car accident law
-                        firm in your area. Our dedicated team of car accident lawyers will fight for you against the
-                        insurance company’s attempts to weaken your claim. Because of this, Wilshire Law Firm has
-                        familiarized itself with how insurance companies work and we know how to counteract their
-                        delay-and-deny tactics. It is common for us to double, triple, or even quadruple an insurance
-                        company’s initial settlement offer. We have won more than <strong>$400 million</strong> for our
-                        clients. If you want to get maximum compensation for your damages, injuries and losses, call
-                        Wilshire Law Firm today. With our team of expert car accident attorneys, you will never have to
-                        settle for less than you deserve. Call now or tap the button below for a free consultation!
+                        California Labor codes 1102.5 and Code Section 6310, an employer cannot discharge or discriminate against an employee who has made a compliant or testified against their company for reporting company misconduct. This also means that if you are a
+                        whistleblower, your company can't legally retaliate against you, nor can a company enforce rules that would prevent you from being a whistleblower. Whistleblower rights exist to help keep companies in check and those brave enough to expose a company's
+                        wrong doings shouldn't be punished for doing so. If you feel that you have been retaliated against for whistleblowing, then you need to hire a whistleblowing discrimination lawyer who can protect your rights. Our whistleblowing lawyers are prepared to
+                        aggressively fight not only to protect your whistleblowing rights, but that you're compensated for losses or damages you may have sustained as a result of retaliation. Wilshire Law Firm's legal methods work, proof being that we've won our clients more
+                        than 400 million dollars in compensation. Retaliation for whistleblowing is never an acceptable approach a company should take against their employees. Seek justice today by calling Wilshire Law Firm for a free case consultation.
+
                     </p>
                 </div>
 
