--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Sexual Harassment Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -65,22 +65,18 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Employment And Class Action Lawyers</h2>
+                        <h2 class="text-uppercase">Speak To The Best Sexual Harassment Lawyers</h2>
                         <div class="supporttext__badge_mobile lazyload">
 
                         </div>
                     </div>
 
                     <p>
-                        In order to get the compensation that you deserve, you must work with the best car accident law
-                        firm in your area. Our dedicated team of car accident lawyers will fight for you against the
-                        insurance company’s attempts to weaken your claim. Because of this, Wilshire Law Firm has
-                        familiarized itself with how insurance companies work and we know how to counteract their
-                        delay-and-deny tactics. It is common for us to double, triple, or even quadruple an insurance
-                        company’s initial settlement offer. We have won more than <strong>$400 million</strong> for our
-                        clients. If you want to get maximum compensation for your damages, injuries and losses, call
-                        Wilshire Law Firm today. With our team of expert car accident attorneys, you will never have to
-                        settle for less than you deserve. Call now or tap the button below for a free consultation!
+                        Not only is sexual harassment in the workplace wrong, it’s illegal. The California Fair Employment and Housing Act (FEHA) guarantees workers the right to a safe workplace, free of verbal, physical, and sexual harassment. When employers fail in their duty to
+                        provide a harassment-free work environment, get Wilshire Law Firm on your side to make them pay.Ranked by U.S. News & World Report as one of the country’s Best Law Firms, Wilshire Law Firm’s award-winning attorneys have a proven track record of protecting the
+                        rights of sexual harassment victims. Thousands of clients have trusted Wilshire Law Firm with their case since 2007, and we have rewarded that trust with more than $400,000,000 in compensation.If you’ve faced sexual harassment in the workplace, the time to take
+                        action is now. Wilshire Law Firm’s sexual harassment lawyers will aggressively fight to recover maximum compensation for you. Get the justice you deserve by calling Wilshire Law Firm today for a FREE case consultation.
+
                     </p>
                 </div>
 
