ADA compliance color update

--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -982,7 +982,7 @@ div.ginput_complex.ginput_container.gf_name_has_2 span {
 }
 
 .wlf-form input[type=submit] {
-    background: #f16824;
+    background: #B21012;
     border: none;
     color: #fff;
     font-size: 15px;
@@ -1422,7 +1422,7 @@ a.card-header--inactive {
     text-decoration: none !important;
     padding-bottom: 0;
     padding-top: 0;
-    background: #f16824;
+    background: #B21012;
     position: fixed;
     bottom: 0;
     left: 0;
