Add caseType to Forms

--- a/site/layouts/partials/form.html
+++ b/site/layouts/partials/form.html
@@ -38,6 +38,7 @@
             <div class="form-group">
                 <input type="hidden" id="pageurl-bottom"  name="pageurl-bottom" value="pageurl-bottom" />
                 <input name="branchname-bottom" id="branchname-bottom" type="hidden" value="lp19short">
+                <input name="caseType" id="caseType" type="hidden" value="Employment"/>
                 <div class="messages"></div>
             </div>
             <div class="form-group">
