--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -98,6 +98,7 @@
                             <div class="form-group">
                                 <input name="pageurl" id="pageurl" type="hidden" value="pageurl"/>
                                 <input name="branchname" id="branchname" type="hidden" value="lp19short">
+                                <input name="caseType" id="caseType" type="hidden" value="Employment"/>
                                 <div class="messages"></div>
                             </div>
                             <div class="form-group">
