--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -46,6 +46,7 @@
                         <div class="form-group">
                             <input type="hidden" id="pageurl-bottom"  name="pageurl-bottom" value="pageurl-bottom" />
                             <input name="branchname-bottom" id="branchname-bottom" type="hidden" value="lp19short">
+                            <input name="caseType" id="caseType" type="hidden" value="Employment"/>
                             <div class="messages"></div>
                         </div>
                         <div class="form-group whywlf__submit">
