Wrongful Termination Verbiage Update

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="d-none d-lg-block col-lg-12 text-left" style="padding-left:0;">
-                <h2 class="text-uppercase">Speak To The Best Whistleblower Lawyers</h2>
+                <h2 class="text-uppercase">Speak To The Best Wrongful Termination Lawyers</h2>
             </div>
         </div>
         <div class="row">
@@ -65,19 +65,14 @@
 
                 <div class="text-left supporttext__paragraph_container">
                     <div class="supporttext__paragraph_container__header_mobile d-md-flex d-lg-none">
-                        <h2 class="text-uppercase">Speak To The Best Whistleblower Lawyers</h2>
+                        <h2 class="text-uppercase">Speak To The Best Wrongful Termination Lawyers</h2>
                         <div class="supporttext__badge_mobile lazyload">
 
                         </div>
                     </div>
 
                     <p>
-                        California Labor codes 1102.5 and Code Section 6310, an employer cannot discharge or discriminate against an employee who has made a compliant or testified against their company for reporting company misconduct. This also means that if you are a
-                        whistleblower, your company can't legally retaliate against you, nor can a company enforce rules that would prevent you from being a whistleblower. Whistleblower rights exist to help keep companies in check and those brave enough to expose a company's
-                        wrong doings shouldn't be punished for doing so. If you feel that you have been retaliated against for whistleblowing, then you need to hire a whistleblowing discrimination lawyer who can protect your rights. Our whistleblowing lawyers are prepared to
-                        aggressively fight not only to protect your whistleblowing rights, but that you're compensated for losses or damages you may have sustained as a result of retaliation. Wilshire Law Firm's legal methods work, proof being that we've won our clients more
-                        than 400 million dollars in compensation. Retaliation for whistleblowing is never an acceptable approach a company should take against their employees. Seek justice today by calling Wilshire Law Firm for a free case consultation.
-
+                        As an employee, you have the right to a safe, comfortable and fair workplace environment free from fear of wrongful termination or unfair dismissal. The passionate wrongful termination lawyers at Wilshire Law Firm are dedicated to protecting the rights of all workers throughout California. If you have any questions about your specific wrongful termination lawsuit, call us at (800) 522-7274 for a FREE consultation and let us fight for you.
                     </p>
                 </div>
 
