updated verbiage in support-text.html

--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -72,11 +72,7 @@
                     </div>
 
                     <p>
-                        According to the California Fair Employment and Housing Act (FEHA), employers must make reasonable accommodations and may not deny employment on the basis of having to make those reasonable accommodations. As an employee, you have the right to a safe,
-                        comfortable and fair workplace environment free from fear of wrongful termination or unfair dismissal. The passionate wrongful termination lawyers at Wilshire Law Firm are dedicated to protecting the rights of all workers throughout California. Trust us
-                        with your case like so many others before you who have seen their compensation double and even quadruple through our services, resulting in more than 750 million dollars being put into the hands of our client. Take action by calling Wilshire Law Firm today
-                        for your free case consultation.
-
+                        As an employee, you have the right to a safe, comfortable and fair workplace environment free from fear of wrongful termination or unfair dismissal. The passionate wrongful termination lawyers at Wilshire Law Firm are dedicated to protecting the rights of all workers throughout California. If you have any questions about your specific wrongful termination lawsuit, call us at for a FREE consultation and let us fight for you.
                     </p>
                 </div>
 
